--- a/lab3.1.ipynb
+++ b/lab3.1.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2hHcKmu_iWSw"
+   },
    "source": [
     "# Лабораторная работа 3.1"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "M0mKacsjiWS7"
+   },
    "source": [
     "## Счастливый билетик\n",
     "\n",
@@ -43,49 +47,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 6893,
+     "status": "ok",
+     "timestamp": 1675667860412,
+     "user": {
+      "displayName": "Яна Халимендик",
+      "userId": "15107969447804239653"
+     },
+     "user_tz": -180
+    },
+    "id": "9cXng_I_iWS_",
+    "outputId": "e397390a-c3f4-4cae-a202-a7701709e992"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ticket number of 6 digits: 45645644\n"
+      "Enter a number:567345\n",
+      "No\n"
      ]
     }
    ],
    "source": [
-    "ticket_number = int(input(\"ticket number of 6 digits: \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "incorrect number of digits\n"
-     ]
-    }
-   ],
-   "source": [
-    "sum1 = ticket_number // 100000 + ticket_number // 10000 % 10 + ticket_number // 1000 % 10\n",
-    "sum2 = ticket_number % 1000 // 100 + ticket_number % 100 // 10 + ticket_number % 10\n",
-    "if (ticket_number // 10000000) < 1:\n",
-    "    if sum1 == sum2:\n",
-    "        print(\"Yes\")\n",
-    "    else:\n",
-    "        print(\"No\")\n",
+    "ticket_number = int(input(\"Enter a number:\"))\n",
+    "first3 = ticket_number // 1000\n",
+    "last3 = ticket_number % 1000\n",
+    "if (first3 // 100 + first3 // 10 % 10 + first3 % 10 == last3 // 100 + last3 // 10 % 10 + last3 % 10):\n",
+    "  print(\"Yes\")\n",
     "else:\n",
-    "    print(\"Incorrect number of digits\")"
+    "  print(\"No\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "sc52_Ut1iWTE"
+   },
    "source": [
     "## Пароль\n",
     "\n",
@@ -130,40 +134,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 85,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 10907,
+     "status": "ok",
+     "timestamp": 1675669507691,
+     "user": {
+      "displayName": "Яна Халимендик",
+      "userId": "15107969447804239653"
+     },
+     "user_tz": -180
+    },
+    "id": "BjmSnhFyiWTH",
+    "outputId": "5c4902f7-906b-4f19-8194-a3d9461aecc2"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter password: an12dRei\n",
-      "Enter name: andrei\n"
-     ]
-    }
-   ],
-   "source": [
-    "password = input(\"Enter password: \")\n",
-    "name = input(\"Enter name: \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Enter a password: yhdvgYU74\n",
+      "Enter a name: yana\n",
       "strong\n"
      ]
     }
    ],
    "source": [
-    "if (password == password.upper() or password == password.lower()\n",
-    "    or password.isalpha() or len(set(password)) < 4 \n",
-    "    or name.lower() in password.lower()):\n",
+    "password = input(\"Enter a password: \")\n",
+    "name = input(\"Enter a name: \")\n",
+    "if (password == password.upper() or password == password.lower() or password.isalpha() \n",
+    "   or len(set(password)) < 4 or name.lower() in password.lower()):\n",
     "  print(\"weak\")\n",
     "else:\n",
     "  print(\"strong\")"
@@ -171,7 +175,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "JHbmuArviWTL"
+   },
    "source": [
     "## Числа Фибоначчи\n",
     "Как известно, [числа Фибоначчи](https://ru.wikipedia.org/wiki/%D0%A7%D0%B8%D1%81%D0%BB%D0%B0_%D0%A4%D0%B8%D0%B1%D0%BE%D0%BD%D0%B0%D1%87%D1%87%D0%B8) — это последовательность чисел, каждое из которых равно сумме двух предыдущих (первые два числа равны $1$):\n",
@@ -203,57 +209,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "id": "mY80Z6UDiWTN"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter amount: 6\n"
-     ]
-    }
-   ],
-   "source": [
-    "amount = int(input(\"Enter amount: \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Enter a numbe: 6\n",
       "1\n",
       "1\n",
       "2\n",
       "3\n",
       "5\n",
-      "8\n"
+      "8\n",
+      "13\n"
      ]
     }
    ],
    "source": [
-    "fib1 = 1\n",
-    "fib2 = 1\n",
-    "print(fib1)\n",
-    "print(fib2)\n",
-    "i = 0\n",
-    "\n",
-    "while i < amount - 2:\n",
-    "    fib_sum = fib1 + fib2\n",
-    "    fib1 = fib2\n",
-    "    fib2 = fib_sum\n",
-    "    i = i + 1\n",
-    "    print(fib2)"
+    "amount = int(input(\"Enter a numbe: \"))\n",
+    "a, b = 0, 1\n",
+    "print(b)\n",
+    "for i in range(amount):\n",
+    "    sum = a + b\n",
+    "    a = b\n",
+    "    b = sum\n",
+    "    print(b)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "AynhVizoiWTR"
+   },
    "source": [
     "## Время исследований\n",
     "\n",
@@ -279,14 +270,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "29tKs-OniWTU"
+   },
+   "source": [
+    "Импорт библиотек:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*в такой ячейке (режим Markdown) можно писать текст*"
+    "Чтение файла с данными и вывод столбцов:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,165 +294,210 @@
     "from math import sqrt\n",
     "\n",
     "\n",
-    "with open('data_food.csv', 'r', newline='') as csvfile:\n",
-    "    data = csv.reader(csvfile, delimiter=',')\n",
-    "    salary = []\n",
-    "    weight = []\n",
+    "with open('avocado.csv', 'r', newline='') as csvf:\n",
+    "    data = csv.reader(csvf, delimiter=',')\n",
+    "    total_vol = []\n",
+    "    total_bags = []\n",
     "    for row in data:\n",
-    "        if row[7] == \"Male\":\n",
-    "            weight.append(float(row[3]))\n",
-    "            salary.append(float(row[6]))"
+    "        if row[3] == \"Total_Volume\":\n",
+    "            continue\n",
+    "        total_vol.append(float(row[3]))\n",
+    "        total_bags.append(float(row[7]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Подсчитаем среднее значение в 2-х столбцах"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Среднее значение веса мужчин: 74.4965\n",
-      "Среднее значение заработаной платы мужчин: 45649.9397\n"
+      "Среднее значение Total_Volume 850644.0130089332\n",
+      "Среднее значение Total_Bags : 239639.20205983953\n"
      ]
     }
    ],
    "source": [
-    "sr_weight = sum(weight) / len(weight)\n",
-    "sr_salary = sum(salary) / len(salary)\n",
-    "print(f\"Среднее значение веса мужчин: {sr_weight:.4f}\")\n",
-    "print(f\"Среднее значение заработаной платы мужчин: {sr_salary:.4f}\")"
+    "vol = sum(total_vol) / len(total_vol)\n",
+    "bag = sum(total_bags) / len(total_bags)\n",
+    "print(f\"Среднее значение Total_Volume {vol}\")\n",
+    "print(f\"Среднее значение Total_Bags : {bag}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Подсчитаем стандартные отклонения двух выбранных числовых атрибутов:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Стандартное отклонение коэффициента веса мужчин: 17.5647\n",
-      "Стандартное отклонение заработаной платы мужчин: 56383.8126\n"
+      "2.176434493218307e+17\n",
+      "18249\n",
+      "Стандартное отклонение Total_Volume: 3453450.731237387\n",
+      "Стандартное отклонение Total_Bags: 986215.3770258684\n"
      ]
     }
    ],
    "source": [
-    "weight_otk = sqrt(sum((elem-sr_weight)**2 for elem in weight) / len(weight))\n",
-    "salary_otk = sqrt(sum((elem-sr_salary)**2 for elem in salary) / len(salary))\n",
-    "print(\"Стандартное отклонение коэффициента веса мужчин: \"\n",
-    "     f\"{weight_otk:.4f}\")\n",
-    "print(\"Стандартное отклонение заработаной платы мужчин: \"\n",
-    "     f\"{salary_otk:.4f}\")"
+    "v1 = sum((el-vol)**2 for el in total_vol) / len(total_vol)\n",
+    "st_v = sqrt(v1)\n",
+    "v2 = sum((elem-bag)**2 for elem in total_bags) / len(total_bags)\n",
+    "st_b = sqrt(v2)\n",
+    "print(sum((el-vol)**2 for el in total_vol))\n",
+    "print(len(total_vol))\n",
+    "print(f\"Стандартное отклонение Total_Volume: {st_v}\")\n",
+    "print(f\"Стандартное отклонение Total_Bags: {st_b}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Проверила с помощью ддугой библиотеки"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ynakh\\AppData\\Local\\Temp\\ipykernel_11696\\1959062251.py:4: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  data.std()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0      1.548104e+01\n",
+       "AveragePrice    4.026766e-01\n",
+       "Total_Volume    3.453545e+06\n",
+       "4046            1.264989e+06\n",
+       "4225            1.204120e+06\n",
+       "4770            1.074641e+05\n",
+       "Total_Bags      9.862424e+05\n",
+       "Small_Bags      7.461785e+05\n",
+       "Large_Bags      2.439660e+05\n",
+       "XLarge_Bags     1.769289e+04\n",
+       "year            9.399385e-01\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "data = pd.read_csv('avocado.csv')\n",
+    "data.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Составим уравнение линейной зависимости"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Уравнение линейной зависимости: y = 727.534138541161x + -8548.83285092099\n",
-      "Значения функции на кривой методом наименьших квадратов: \n",
-      "44561.159262583766\n",
-      "42378.55684696028\n",
-      "44197.392193313186\n",
-      "46016.22753966609\n",
-      "46016.22753966609\n",
-      "61294.44444903047\n",
-      "43615.36488248026\n",
-      "42378.55684696028\n",
-      "38740.88615425448\n",
-      "54019.10306361886\n",
-      "41651.02270841912\n",
-      "39104.653223525056\n",
-      "49653.898232371896\n",
-      "38886.392981962716\n",
-      "56929.2396177835\n",
-      "27827.874076137065\n",
-      "56201.705479242344\n",
-      "20116.012207600754\n",
-      "49653.898232371896\n",
-      "60566.91031048931\n",
-      "34957.70863384044\n",
-      "31465.54476884287\n",
-      "42378.55684696028\n",
-      "32193.078907384028\n",
-      "51836.50064799537\n",
-      "51108.966509454214\n",
-      "59111.84203340699\n",
-      "44197.392193313186\n",
-      "48198.82995528957\n",
-      "45652.460470395505\n",
-      "42524.06367466852\n",
-      "45070.433159562584\n",
-      "49653.898232371896\n",
-      "33648.147184466354\n",
-      "41287.25563914854\n",
-      "56929.2396177835\n",
-      "54019.10306361886\n",
-      "24408.4636249936\n",
-      "60930.677379759894\n",
-      "47471.29581674841\n",
-      "52564.03478653654\n",
-      "31465.54476884287\n",
-      "60930.677379759894\n",
-      "51108.966509454214\n",
-      "30738.01063030171\n",
-      "32193.078907384028\n",
-      "72934.99066568905\n",
-      "47107.52874747783\n",
-      "48198.82995528957\n",
-      "54237.36330518121\n",
-      "24190.203383431257\n",
-      "38886.392981962716\n",
-      "29719.46283634408\n",
-      "46016.22753966609\n",
-      "42378.55684696028\n",
-      "43324.35122706379\n",
-      "60024.169843137606\n",
-      "60566.91031048931\n",
-      "46016.22753966609\n",
-      "46379.99460893667\n",
-      "49653.898232371896\n",
-      "38013.35201571332\n",
-      "38740.88615425448\n",
-      "42378.55684696028\n",
-      "42378.55684696028\n",
-      "26954.833109887666\n",
-      "110039.23173128825\n",
-      "35103.21546154867\n",
-      "41651.02270841912\n",
-      "42378.55684696028\n",
-      "54019.10306361886\n"
+      "Уравнение линейной зависимости: y = 0.2750211065408285x + 784738.1744878748\n"
      ]
     }
    ],
    "source": [
-    "sum_elem = 0\n",
+    "sum_ab = 0\n",
     "sum_square = 0\n",
-    "for index, elem in enumerate(weight):\n",
-    "    sum_elem += elem * salary[index]\n",
-    "    sum_square += elem**2\n",
-    "a = (len(weight) * sum_elem - sum(weight) * sum(salary))/(len(weight) * sum_square - sum(weight)**2)\n",
-    "b = sr_salary - sr_weight * a\n",
-    "func_elem = []\n",
-    "for elem in weight:\n",
-    "    func_elem.append(a * elem + b)\n",
-    "print(f\"Уравнение линейной зависимости: y = {a}x + {b}\")\n",
-    "print(\"Значения функции на кривой методом наименьших квадратов: \")\n",
-    "for val in func_elem:\n",
-    "    print(val)"
+    "\n",
+    "for i, el in enumerate(total_vol):\n",
+    "    sum_ab += el * total_bags[i]\n",
+    "    sum_square += el**2\n",
+    "\n",
+    "size = len(total_vol)\n",
+    "k_lin = (size * sum_ab - sum(total_vol) * sum(total_bags))/(size * sum_square - sum(total_vol)**2)\n",
+    "b_lin = vol - bag * k_lin\n",
+    "func_val = []\n",
+    "\n",
+    "for el in total_vol:\n",
+    "    func_val.append(k_lin * el + b_lin)\n",
+    "\n",
+    "print(f\"Уравнение линейной зависимости: y = {k_lin}x + {b_lin}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Найдем коэффициент парной корреляции:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Коэффициент парной корреляции: 0.9630470824267295\n"
+     ]
+    }
+   ],
+   "source": [
+    "cor_chisl = 0\n",
+    "for i, el in enumerate(total_vol):\n",
+    "    cor_chisl += (el - vol)*(total_bags[i] - bag)\n",
+    "sqr_diff_vol = sum((el-vol)**2 for el in total_vol)\n",
+    "sqr_diff_bag = sum((el-bag)**2 for el in total_bags)\n",
+    "r_xy = cor_chisl / sqrt(sqr_diff_vol * sqr_diff_bag)\n",
+    "print(f\"Коэффициент парной корреляции: {r_xy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Коэффициент парной корреляции ~ 0.96, что может говорить о неявной зависимости"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
